--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>McLachlan Electrical</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="header">
+        <img src="" alt="logo">
+        <h1>McLachlan Electrical</h1>
+    </div>
+</body>
+</html>
