--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="header">
         <img src="" alt="logo">
-        <h1>McLachlan Electrical</h1>
+        <h1 class="title">McLachlan Electrical</h1>
     </div>
 </body>
 </html>
