--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="" alt="logo">
+        <img src="logo.png" alt="logo">
         <h1 class="title">McLachlan Electrical</h1>
     </div>
 </body>
