--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">
-        <img src="logo.png" alt="logo">
-        <h1 class="title">McLachlan Electrical</h1>
-    </div>
+    <header>
+        <img class="header_logo" src="logo.png" alt="logo">
+        <nav>
+            <ul class="nav_links">
+                <li><a href="#">About</a></li>
+                <li><a href="#">Electrical</a></li>
+                <li><a href="#">Solar PV</a></li>
+                <li><a href="#">SolarWorld</a></li>
+            </ul>
+        </nav>
+        <a class="contact" href="#"><button>Contact</button></a>
+    </header>
 </body>
 </html>
