--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <img class="header_logo" src="logo.png" alt="logo">
+        <img class="header_logo" src="https://cms.pm/uploads/mclachlan-electrical.com_--_124158483.png" alt="logo">
         <nav>
             <ul class="nav_links">
                 <li><a href="#">About</a></li>
