--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
 <body>
     <header>
         <nav>
-            <ul class="nav_links">
-                <li><a href="#">About</a></li>
-                <li><a href="#">Electrical</a></li>
-                <li><a href="#">Solar PV</a></li>
-                <li><a href="#">SolarWorld</a></li>
-            </ul>
+            <a href="#">About</a>
+            <a href="#">Electrical</a>
+            <a href="#">Solar PV</a>
+            <a href="#">SolarWorld</a>
         </nav>
         <img class="header_logo" src="https://cms.pm/uploads/mclachlan-electrical.com_--_124158483.png" alt="logo">
         <a class="contact" href="#"><button>Contact</button></a>
